test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/void_fun_params.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  void
  identifier(foo)
  (
  void
  identifier(x)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
